# swiftacular

./: .gitattributes  .gitignore  .gitreview  2_provision_VMs.sh  3_deploy_swift_with_monitoring.sh  Jenkinsfile  README.md  Vagrantfile  ansible.cfg  apply_patches.yml  apply_single_patch.yml  bootstrap_swift_with_monitoring.sh  ceph_playbook.yml  cleanup.sh  collections_requirements.yml  deploy_jenkins.yml  deploy_swift_cluster.yml  evaluate_memory.sh  groups  hosts  insert_object_to_swift.py  install_packages_on_nodes.yml  install_prereqs.sh  jsonnet_install.yml  mem_disk.patch  project.config  run_ceph_automation.sh  setup-swift-monitoring.yml  setup_workload_test.yml  sharder.patch  start_proxy.yml  start_storage.yml  swift_workloader.py  test.txt  tox.ini  update_ceph_bs_tools.yml  vagrant_box.sh  xfs_dbg.patch
bs_util/: bs_util.cc
ceph_patches/: CMakeLists.txt  bs_ondisk.cc  bs_util.cc  bs_xattr.cc  objectstore_bench.cc  test_kv.cc
docs/: monitoring.md
group_vars/: all.example  storage.yml
kube_deploy/: README.md
kube_deploy/bs_bench/: objectstore_bench.cc
kube_deploy/bs_util/: bs_util.cc
kube_deploy/cluster/: kind-config.yaml
kube_deploy/dockerfiles/: Dockerfile.base  Dockerfile.bluestore  Dockerfile.grafana  Dockerfile.keystone  Dockerfile.proxy  (+2 more)
playbooks/: remove_disks.yml  remove_keystone.yml  remove_rings.yml
scripts/: compile_and_test_bluestore.sh
swift_patches/: 1_bs_object.patch
tests/: swiftclient.yml  tests.yml
workload_tests/: config.py  test_bs_ondisk.py  test_bs_xattr.py  test_workload.py
xfs_bench/: xfs_loop_benchmark.py
(+97 files in other folders)
